@@ -18,90 +18,52 @@ package io.github.lycoriscafe.nexus.http;
 
 import io.github.lycoriscafe.nexus.http.configuration.AnnotationScanner;
 import io.github.lycoriscafe.nexus.http.configuration.Database;
-import io.github.lycoriscafe.nexus.http.configuration.ThreadType;
+import io.github.lycoriscafe.nexus.http.configuration.HTTPServerConfiguration;
 import io.github.lycoriscafe.nexus.http.connHelper.ConnectionHandler;
 
 import java.io.IOException;
-import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.sql.Connection;
 import java.sql.SQLException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 
 import static io.github.lycoriscafe.nexus.http.configuration.ThreadType.PLATFORM;
 
 public final class HTTPServer {
+    private final HTTPServerConfiguration CONFIGURATION;
     private final ServerSocket SERVER_SOCKET;
-    private final ThreadType THREAD_TYPE;
     private final Connection DATABASE;
-    private final int MAX_CONNECTIONS;
 
     private ExecutorService executorService;
     private boolean operational;
 
-    public HTTPServer(final int PORT,
-                      final ThreadType THREAD_TYPE,
-                      final String DB_LOCATION,
-                      final int MAX_CONNECTIONS,
-                      final String BASE_PACKAGE)
+    public HTTPServer(final HTTPServerConfiguration httpServerConfiguration)
             throws IOException, IllegalArgumentException, SQLException {
-        maxConnValidator(MAX_CONNECTIONS);
-        DATABASE = Database.getConnection(DB_LOCATION, PORT);
-        AnnotationScanner.scan(DATABASE, BASE_PACKAGE);
-        SERVER_SOCKET = new ServerSocket(PORT);
-        this.THREAD_TYPE = THREAD_TYPE;
-        this.MAX_CONNECTIONS = MAX_CONNECTIONS;
-    }
-
-    public HTTPServer(final int PORT,
-                      final int BACKLOG,
-                      final ThreadType THREAD_TYPE,
-                      final String DB_LOCATION,
-                      final int MAX_CONNECTIONS,
-                      final String BASE_PACKAGE)
-            throws IOException, IllegalArgumentException, SQLException {
-        maxConnValidator(MAX_CONNECTIONS);
-        DATABASE = Database.getConnection(DB_LOCATION, PORT);
-        AnnotationScanner.scan(DATABASE, BASE_PACKAGE);
-        SERVER_SOCKET = new ServerSocket(PORT, BACKLOG);
-        this.THREAD_TYPE = THREAD_TYPE;
-        this.MAX_CONNECTIONS = MAX_CONNECTIONS;
-    }
-
-    public HTTPServer(final int PORT,
-                      final int BACKLOG,
-                      final InetAddress ADDRESS,
-                      final ThreadType THREAD_TYPE,
-                      final String DB_LOCATION,
-                      final int MAX_CONNECTIONS,
-                      final String BASE_PACKAGE)
-            throws IOException, IllegalArgumentException, SQLException {
-        maxConnValidator(MAX_CONNECTIONS);
-        DATABASE = Database.getConnection(DB_LOCATION, PORT);
-        AnnotationScanner.scan(DATABASE, BASE_PACKAGE);
-        SERVER_SOCKET = new ServerSocket(PORT, BACKLOG, ADDRESS);
-        this.THREAD_TYPE = THREAD_TYPE;
-        this.MAX_CONNECTIONS = MAX_CONNECTIONS;
-    }
-
-    private void maxConnValidator(int maxConn) throws IllegalArgumentException {
-        if (maxConn < 1) {
-            throw new IllegalArgumentException("Max connections must be greater than 0");
-        }
+        CONFIGURATION = httpServerConfiguration;
+        DATABASE = Database.getConnection(httpServerConfiguration.getDatabaseLocation(),
+                httpServerConfiguration.getPort());
+        AnnotationScanner.scan(DATABASE, httpServerConfiguration.getBasePackage());
+        SERVER_SOCKET = httpServerConfiguration.getAddress() == null ?
+                new ServerSocket(httpServerConfiguration.getPort(), httpServerConfiguration.getBacklog()) :
+                new ServerSocket(httpServerConfiguration.getPort(), httpServerConfiguration.getBacklog(),
+                        httpServerConfiguration.getAddress());
     }
 
     public void start() throws IllegalStateException {
         System.out.println(operational);
         if (!operational) {
-            Thread.Builder engine = THREAD_TYPE == PLATFORM ? Thread.ofPlatform() : Thread.ofVirtual();
+            Thread.Builder engine = CONFIGURATION.getThreadType() == PLATFORM ?
+                    Thread.ofPlatform() : Thread.ofVirtual();
             engine.start(() -> {
                 operational = true;
-                Thread.Builder worker = THREAD_TYPE == PLATFORM ? Thread.ofPlatform() : Thread.ofVirtual();
-                executorService = Executors.newFixedThreadPool(MAX_CONNECTIONS, worker.factory());
+                ThreadFactory worker = CONFIGURATION.getThreadType() == PLATFORM ?
+                        Thread.ofPlatform().factory() : Thread.ofVirtual().factory();
+                executorService = Executors.newFixedThreadPool(CONFIGURATION.getMaxConnections(), worker);
                 while (operational) {
                     try {
-                        executorService.submit(new ConnectionHandler(SERVER_SOCKET.accept()));
+                        executorService.submit(new ConnectionHandler(SERVER_SOCKET.accept(), DATABASE));
                     } catch (IOException e) {
                         operational = false;
                     }
